--- a/ML-training/cv-crash-course/infrastructure_test.ipynb
+++ b/ML-training/cv-crash-course/infrastructure_test.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOz7uKLGbXI8aGaBA6TjumB",
+      "authorship_tag": "ABX9TyPTBoPqQLw92TTkae/cyrHW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,9 +51,32 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "print(\"Hello again!\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "x7NhU8lB5tv3",
+        "outputId": "3b89e641-f955-4218-efc5-de469efd1031"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello again!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "x7NhU8lB5tv3"
+        "id": "fAdk-B1aEXEh"
       },
       "execution_count": null,
       "outputs": []
