Skapad med Colaboratory

--- a/ML-training/logging-trainings-with-WandB/train.ipynb
+++ b/ML-training/logging-trainings-with-WandB/train.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/daniel-falk/ai-ml-principles-exercises/blob/main/ML-training/logging-trainings-with-WandB/train.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/linnea-backgard/ai-ml-principles-exercises/blob/main/ML-training/logging-trainings-with-WandB/train.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -23,12 +23,45 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "a038785e",
       "metadata": {
-        "id": "a038785e"
+        "id": "a038785e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1e0357be-4db5-49b0-f79e-395a144c0466"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "Requirement already satisfied: wandb in /usr/local/lib/python3.8/dist-packages (0.13.5)\n",
+            "Requirement already satisfied: psutil>=5.0.0 in /usr/local/lib/python3.8/dist-packages (from wandb) (5.4.8)\n",
+            "Requirement already satisfied: setuptools in /usr/local/lib/python3.8/dist-packages (from wandb) (57.4.0)\n",
+            "Requirement already satisfied: PyYAML in /usr/local/lib/python3.8/dist-packages (from wandb) (6.0)\n",
+            "Requirement already satisfied: Click!=8.0.0,>=7.0 in /usr/local/lib/python3.8/dist-packages (from wandb) (7.1.2)\n",
+            "Requirement already satisfied: shortuuid>=0.5.0 in /usr/local/lib/python3.8/dist-packages (from wandb) (1.0.11)\n",
+            "Requirement already satisfied: sentry-sdk>=1.0.0 in /usr/local/lib/python3.8/dist-packages (from wandb) (1.9.0)\n",
+            "Requirement already satisfied: docker-pycreds>=0.4.0 in /usr/local/lib/python3.8/dist-packages (from wandb) (0.4.0)\n",
+            "Requirement already satisfied: protobuf!=4.0.*,!=4.21.0,<5,>=3.12.0 in /usr/local/lib/python3.8/dist-packages (from wandb) (3.19.6)\n",
+            "Requirement already satisfied: pathtools in /usr/local/lib/python3.8/dist-packages (from wandb) (0.1.2)\n",
+            "Requirement already satisfied: requests<3,>=2.0.0 in /usr/local/lib/python3.8/dist-packages (from wandb) (2.23.0)\n",
+            "Requirement already satisfied: GitPython>=1.0.0 in /usr/local/lib/python3.8/dist-packages (from wandb) (3.1.29)\n",
+            "Requirement already satisfied: promise<3,>=2.0 in /usr/local/lib/python3.8/dist-packages (from wandb) (2.3)\n",
+            "Requirement already satisfied: six>=1.13.0 in /usr/local/lib/python3.8/dist-packages (from wandb) (1.15.0)\n",
+            "Requirement already satisfied: setproctitle in /usr/local/lib/python3.8/dist-packages (from wandb) (1.3.2)\n",
+            "Requirement already satisfied: gitdb<5,>=4.0.1 in /usr/local/lib/python3.8/dist-packages (from GitPython>=1.0.0->wandb) (4.0.10)\n",
+            "Requirement already satisfied: smmap<6,>=3.0.1 in /usr/local/lib/python3.8/dist-packages (from gitdb<5,>=4.0.1->GitPython>=1.0.0->wandb) (5.0.0)\n",
+            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.8/dist-packages (from requests<3,>=2.0.0->wandb) (2.10)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.8/dist-packages (from requests<3,>=2.0.0->wandb) (2022.9.24)\n",
+            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.8/dist-packages (from requests<3,>=2.0.0->wandb) (1.24.3)\n",
+            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.8/dist-packages (from requests<3,>=2.0.0->wandb) (3.0.4)\n"
+          ]
+        }
+      ],
       "source": [
         "import sys\n",
         "!{sys.executable} -m pip install numpy tensorflow\n",
@@ -36,8 +69,33 @@
         "clear_output()\n",
         "import numpy as np\n",
         "from tensorflow import keras\n",
-        "from tensorflow.keras import layers"
+        "from tensorflow.keras import layers\n",
+        "!pip install wandb\n",
+        "import wandb"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "bzflV46knVwz"
+      },
+      "id": "bzflV46knVwz",
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "      "
+      ],
+      "metadata": {
+        "id": "Vkk9CfELne6L"
+      },
+      "id": "Vkk9CfELne6L",
+      "execution_count": 1,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -52,7 +110,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [],
+      "metadata": {
+        "id": "O1Wz39BynUDh"
+      },
+      "id": "O1Wz39BynUDh",
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
       "id": "18d76d50",
       "metadata": {
         "id": "18d76d50"
@@ -86,7 +154,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "48724cbc",
       "metadata": {
         "id": "48724cbc"
@@ -126,20 +194,94 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "id": "0879ae37",
       "metadata": {
         "id": "0879ae37"
       },
       "outputs": [],
       "source": [
-        "batch_size = 128\n",
-        "epochs = 15"
+        "batch_size = 100\n",
+        "epochs = 10"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "wandb.init(project=\"15epoch\", config={\"batch_size\": batch_size, \"epochs\": epochs})"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 108
+        },
+        "id": "3Ye9AeR3pNHn",
+        "outputId": "3845f95b-3689-41c0-80f7-4007fb9987e7"
+      },
+      "id": "3Ye9AeR3pNHn",
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mlinnea-backgard\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "Tracking run with wandb version 0.13.5"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "Run data is saved locally in <code>/content/wandb/run-20221206_150228-14nznye6</code>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "Syncing run <strong><a href=\"https://wandb.ai/linnea-backgard/15epoch/runs/14nznye6\" target=\"_blank\">curious-voice-6</a></strong> to <a href=\"https://wandb.ai/linnea-backgard/15epoch\" target=\"_blank\">Weights & Biases</a> (<a href=\"https://wandb.me/run\" target=\"_blank\">docs</a>)<br/>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<button onClick=\"this.nextSibling.style.display='block';this.style.display='none';\">Display W&B run</button><iframe src=\"https://wandb.ai/linnea-backgard/15epoch/runs/14nznye6?jupyter=true\" style=\"border:none;width:100%;height:420px;display:none;\"></iframe>"
+            ],
+            "text/plain": [
+              "<wandb.sdk.wandb_run.Run at 0x7f16c0d69550>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
       "id": "77dc3663",
       "metadata": {
         "id": "77dc3663"
@@ -152,12 +294,150 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "id": "8c4588e7",
       "metadata": {
-        "id": "8c4588e7"
+        "id": "8c4588e7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "590f970a-5b38-42af-9b9f-25401a1011ab"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m The save_model argument by default saves the model in the HDF5 format that cannot save custom objects like subclassed models and custom layers. This behavior will be deprecated in a future release in favor of the SavedModel format. Meanwhile, the HDF5 model is saved as W&B files and the SavedModel as W&B Artifacts.\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/10\n",
+            "540/540 [==============================] - ETA: 0s - loss: 0.2581 - accuracy: 0.9276"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:absl:Found untraced functions such as _jit_compiled_convolution_op, _jit_compiled_convolution_op while saving (showing 2 of 2). These functions will not be directly callable after loading.\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: Adding directory to artifact (/content/wandb/run-20221206_150228-14nznye6/files/model-best)... Done. 0.0s\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\r540/540 [==============================] - 37s 67ms/step - loss: 0.2581 - accuracy: 0.9276 - val_loss: 0.0816 - val_accuracy: 0.9787\n",
+            "Epoch 2/10\n",
+            "540/540 [==============================] - ETA: 0s - loss: 0.0716 - accuracy: 0.9784"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:absl:Found untraced functions such as _jit_compiled_convolution_op, _jit_compiled_convolution_op while saving (showing 2 of 2). These functions will not be directly callable after loading.\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: Adding directory to artifact (/content/wandb/run-20221206_150228-14nznye6/files/model-best)... Done. 0.0s\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\r540/540 [==============================] - 34s 63ms/step - loss: 0.0716 - accuracy: 0.9784 - val_loss: 0.0571 - val_accuracy: 0.9838\n",
+            "Epoch 3/10\n",
+            "540/540 [==============================] - ETA: 0s - loss: 0.0521 - accuracy: 0.9841"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:absl:Found untraced functions such as _jit_compiled_convolution_op, _jit_compiled_convolution_op while saving (showing 2 of 2). These functions will not be directly callable after loading.\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: Adding directory to artifact (/content/wandb/run-20221206_150228-14nznye6/files/model-best)... Done. 0.0s\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\r540/540 [==============================] - 36s 67ms/step - loss: 0.0521 - accuracy: 0.9841 - val_loss: 0.0427 - val_accuracy: 0.9868\n",
+            "Epoch 4/10\n",
+            "540/540 [==============================] - 34s 64ms/step - loss: 0.0425 - accuracy: 0.9868 - val_loss: 0.0435 - val_accuracy: 0.9860\n",
+            "Epoch 5/10\n",
+            "540/540 [==============================] - ETA: 0s - loss: 0.0358 - accuracy: 0.9891"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:absl:Found untraced functions such as _jit_compiled_convolution_op, _jit_compiled_convolution_op while saving (showing 2 of 2). These functions will not be directly callable after loading.\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: Adding directory to artifact (/content/wandb/run-20221206_150228-14nznye6/files/model-best)... Done. 0.0s\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\r540/540 [==============================] - 35s 65ms/step - loss: 0.0358 - accuracy: 0.9891 - val_loss: 0.0394 - val_accuracy: 0.9885\n",
+            "Epoch 6/10\n",
+            "540/540 [==============================] - ETA: 0s - loss: 0.0298 - accuracy: 0.9906"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:absl:Found untraced functions such as _jit_compiled_convolution_op, _jit_compiled_convolution_op while saving (showing 2 of 2). These functions will not be directly callable after loading.\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: Adding directory to artifact (/content/wandb/run-20221206_150228-14nznye6/files/model-best)... Done. 0.0s\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\r540/540 [==============================] - 36s 66ms/step - loss: 0.0298 - accuracy: 0.9906 - val_loss: 0.0358 - val_accuracy: 0.9892\n",
+            "Epoch 7/10\n",
+            "540/540 [==============================] - 35s 65ms/step - loss: 0.0249 - accuracy: 0.9922 - val_loss: 0.0367 - val_accuracy: 0.9892\n",
+            "Epoch 8/10\n",
+            "540/540 [==============================] - 34s 63ms/step - loss: 0.0212 - accuracy: 0.9935 - val_loss: 0.0373 - val_accuracy: 0.9908\n",
+            "Epoch 9/10\n",
+            "540/540 [==============================] - 33s 62ms/step - loss: 0.0197 - accuracy: 0.9934 - val_loss: 0.0381 - val_accuracy: 0.9903\n",
+            "Epoch 10/10\n",
+            "540/540 [==============================] - ETA: 0s - loss: 0.0149 - accuracy: 0.9955"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:absl:Found untraced functions such as _jit_compiled_convolution_op, _jit_compiled_convolution_op while saving (showing 2 of 2). These functions will not be directly callable after loading.\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: Adding directory to artifact (/content/wandb/run-20221206_150228-14nznye6/files/model-best)... Done. 0.0s\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\r540/540 [==============================] - 34s 63ms/step - loss: 0.0149 - accuracy: 0.9955 - val_loss: 0.0354 - val_accuracy: 0.9908\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.callbacks.History at 0x7f16bad3f130>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ],
       "source": [
         "# Create a Convolutional Neural Network that\n",
         "# expects a 28x28 pixel image with 1 color chanel (gray) as input\n",
@@ -166,8 +446,19 @@
         "model.compile(loss=\"categorical_crossentropy\",\n",
         "              optimizer=\"adam\", metrics=[\"accuracy\"])\n",
         "model.fit(x_train, y_train, batch_size=batch_size,\n",
-        "          epochs=epochs, validation_split=0.1)"
+        "          epochs=epochs, validation_split=0.1,  \n",
+        "          callbacks=[wandb.keras.WandbCallback()])\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "T2oWOH_lpnnd"
+      },
+      "id": "T2oWOH_lpnnd",
+      "execution_count": 7,
+      "outputs": []
     }
   ],
   "metadata": {
